<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">""</string>
    <string name="title_add_property">Add Property</string>
    <string name="title_view_property">View Property</string>
    <string name="title_add_tenant">Add Tenant</string>
    <string name="title_view_tenant">View Tenant</string>
    <string name="title_add_income">Add Income</string>
    <string name="title_view_income">View Income</string>
    <string name="title_add_expense">Add Expense</string>
    <string name="title_view_expense">View Expense</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="house_number">House Number</string>
    <string name="house_name">House Name</string>
    <string name="rent">Rent</string>
    <string name="items">Items</string>
    <string name="details">Details</string>
    <string name="category">Category</string>
    <string name="add_property">Add Property</string>
    <string name="edit_property">Edit Property</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="edit_income">Edit Income</string>
    <string name="edit_tenant">Edit Tenant</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="tenant_name">Tenant Name</string>
    <string name="number_of_occupants">Number of Occupants</string>
    <string name="items_given">Items Given</string>
    <string name="property">Property</string>
    <string name="date_occupied">Date Occupied</string>
    <string name="phone_number">Phone Number</string>
    <string name="security_deposit">Security Deposit</string>
    <string name="status">Status</string>
    <string name="add_tenant">Add Tenant</string>
    <string name="amount">Amount</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="str_report">Report</string>
    <string name="title_view_report">View Reports</string>
    <string name="generate_report">Generate Report</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="tenant">Tenant</string>

    <string-array name="options">
        <item>Income</item>
        <item>Expense</item>
        <item>Property</item>
        <item>Tenant</item>
    </string-array>
</resources>
