<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.rentmaintainance.app.view.ViewExpensesFragment">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_number"
            android:id="@+id/houseNumberTextView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/houseNumberValueTextView"
            android:layout_alignTop="@+id/houseNumberTextView"
            android:layout_toRightOf="@+id/houseNumberTextView"
            android:layout_marginLeft="92dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginTop="10dp"
            android:id="@+id/dateTextView"
            android:layout_below="@+id/houseNumberTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateValueTextView"
            android:layout_marginLeft="92dp"
            android:layout_alignTop="@+id/dateTextView"
            android:layout_toRightOf="@+id/dateTextView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:id="@+id/amountTextView"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/dateTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amountValueTextView"
            android:layout_marginLeft="92dp"
            android:layout_alignTop="@+id/amountTextView"
            android:layout_toRightOf="@+id/amountTextView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:id="@+id/detailsTextView"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/amountTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailsValueTextView"
            android:layout_marginLeft="92dp"
            android:layout_alignTop="@+id/detailsTextView"
            android:layout_toRightOf="@+id/detailsTextView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:id="@+id/categoryTextView"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/detailsTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/categoryValueTextView"
            android:layout_marginLeft="92dp"
            android:layout_alignTop="@+id/categoryTextView"
            android:layout_toRightOf="@+id/categoryTextView"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_expense"
            android:id="@+id/editExpenseButton"
            android:layout_below="@+id/categoryValueTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="71dp"/>


</RelativeLayout>
