<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.rentmaintainance.app.view.ViewTenantFragment">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenant_name"
            android:id="@+id/tenantNameTextView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tenantNameValueTextView"
            android:layout_alignTop="@+id/tenantNameTextView"
            android:layout_toRightOf="@+id/tenantNameTextView"
            android:layout_marginLeft="92dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_occupied"
            android:layout_marginTop="10dp"
            android:id="@+id/dateOccupiedTextView"
            android:layout_below="@+id/tenantNameTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateOccupiedValueTextView"
            android:layout_marginLeft="92dp"
            android:layout_alignTop="@+id/dateOccupiedTextView"
            android:layout_toRightOf="@+id/dateOccupiedTextView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:id="@+id/phoneNumberTextView"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/dateOccupiedTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumberValueTextView"
            android:layout_marginLeft="92dp"
            android:layout_alignTop="@+id/phoneNumberTextView"
            android:layout_toRightOf="@+id/phoneNumberTextView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_deposit"
            android:id="@+id/securityDepositTextView"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/phoneNumberTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/securityDepositValueTextView"
            android:layout_marginLeft="92dp"
            android:layout_alignTop="@+id/securityDepositTextView"
            android:layout_toRightOf="@+id/securityDepositTextView"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_tenant"
            android:id="@+id/editTenantButton"
            android:layout_below="@+id/securityDepositTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="71dp"/>


</RelativeLayout>
