<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.rentmaintainance.app.view.AddPropertyFragment">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_number"
            android:id="@+id/houseNumberTextView"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/houseNumberEditText"
            android:layout_below="@+id/houseNumberTextView"
            android:maxLines="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:inputType="text"
            android:layout_alignParentEnd="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_name"
            android:id="@+id/houseNameTextView"
            android:layout_below="@+id/houseNumberEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/houseNameEditText"
            android:layout_below="@+id/houseNameTextView"
            android:maxLines="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="text"
            android:layout_alignRight="@+id/houseNumberEditText"
            android:layout_alignEnd="@+id/houseNumberEditText"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent"
            android:id="@+id/rentTextView"
            android:layout_below="@+id/houseNameEditText"
            android:layout_marginTop="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rentEditText"
            android:layout_below="@+id/rentTextView"
            android:maxLines="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="text"
            android:layout_alignRight="@+id/houseNameEditText"
            android:layout_alignEnd="@+id/houseNameEditText"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/items"
            android:layout_marginTop="5dp"
            android:id="@+id/itemsTextView" android:layout_below="@+id/rentEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/itemsEditText"
            android:layout_below="@+id/itemsTextView"
            android:maxLines="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="text"
            android:layout_alignRight="@+id/rentEditText"
            android:layout_alignEnd="@+id/rentEditText"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:id="@+id/detailsTextView"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/itemsEditText" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailsEditText"
            android:layout_below="@+id/detailsTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:maxLines="1"
            android:inputType="text"
            android:layout_alignRight="@+id/itemsEditText"
            android:layout_alignEnd="@+id/itemsEditText"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="5dp"
            android:id="@+id/addressTextView"
            android:layout_below="@+id/detailsEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addressEditText"
            android:layout_below="@+id/addressTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/detailsEditText"
            android:layout_alignEnd="@+id/detailsEditText"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_property"
            android:id="@+id/addPropertyButton"
            android:layout_below="@+id/addressEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp"/>


</RelativeLayout>
