<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.rentmaintainance.app.view.AddTenantFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenant_name"
            android:id="@+id/tenantNameTextView"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tenantNameEditText"
            android:layout_below="@+id/tenantNameTextView"
            android:maxLines="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:inputType="text"
            android:layout_alignParentEnd="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_occupied"
            android:id="@+id/dateOccupiedTextView"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/tenantNameEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateOccupiedEditText"
            android:layout_below="@+id/dateOccupiedTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:maxLines="1"
            android:inputType="date"
            android:layout_alignRight="@+id/tenantNameEditText"
            android:layout_alignEnd="@+id/tenantNameEditText"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_marginTop="5dp"
            android:id="@+id/phoneNumberTextView"
            android:layout_below="@+id/dateOccupiedEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumberEditText"
            android:layout_below="@+id/phoneNumberTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/tenantNameEditText"
            android:layout_alignEnd="@+id/tenantNameEditText"
            android:inputType="phone"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_deposit"
            android:layout_marginTop="5dp"
            android:id="@+id/securityDepositTextView"
            android:layout_below="@+id/phoneNumberEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/securityDepositEditText"
            android:layout_below="@+id/securityDepositTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/tenantNameEditText"
            android:layout_alignEnd="@+id/tenantNameEditText"
            android:inputType="numberDecimal"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_tenant"
            android:id="@+id/addTenantButton"
            android:layout_below="@+id/securityDepositEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp"/>


</RelativeLayout>
